Get api gateway working locally as well as on AWS when deployed.
